Fixed deathRate value when GC caused heap to grow

https://bugs.webkit.org/show_bug.cgi?id=164472
Problem there is about when deathRate is 0, GC timers stop to work.
To recalculate sizeBeforeLastFullCollection and sizeAfterLastFullCollection
need to force GC. And need to wait for memory pressure or memory exceeds max heap size etc to force it.